--- a/index.html
+++ b/index.html
@@ -4,13 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title> Portfolio Hajar </title>
 </head>
+
 <body>
-    <h1> Bienvenue ! </h1>
-    <h2> Présentation </h2>
-        <p> Je m'appelle Hajar et j'ai 22 ans. Fraîchement diplomée en février 2025 d'un diplôme de Développeur Web et Web mobile, je souhaite poursuivre mon cursus en intégrant une formation qui me permettrait d'obtenir un bac +3 en développement web.</p>
-    <h2> Mes compétences </h2>
-    <h2 >Mes projets </h2>
+    <div id="wrapper-portfolio">
+        <h1> Hajar Ayaddouz <strong> Développeuse Web et Web mobile </strong> </h1>
+
+        <div class="presentation">
+            <h2> Présentation </h2>
+            <img src="img/photo-presentation.jpg" alt="Photo de présentation">
+            <p>
+                Hello ! Je m'appelle Hajar, j'ai 22 ans et je suis diplômée d'une formation en développement Web et Web mobile. <br>
+                Ce parcours m’a permis d’acquérir de solides compétences aussi bien en back-end (PHP, Symfony, SQL) qu’en front-end (HTML, CSS, JavaScript). <br>
+                Depuis l’obtention de mon diplôme en février 2025, je suis activement à la recherche d’une alternance afin de poursuivre mes études en bac +3 et continuer à progresser dans le domaine du développement web.
+            </p>
+            <a href=""> Télécharger mon CV </a>
+        </div>
+
+        <h2>Mes compétences </h2>
+
+        <div class="competences">
+            <div class="competence">
+                <h3> Back-end </h3>
+                <ul>
+                    <li> PHP </li>
+                    <li> SQL </li>
+                    <li> Symfony </li>
+                </ul>
+            </div>
+
+            <div class="competence">
+                <h3> Front-end & UX/UI </h3>
+                <ul>
+                    <li> HTML5 </li>
+                    <li> CSS </li>
+                    <li> JavaScript </li>
+                    <li> Figma </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="projets">
+            <h2> Mes projets </h2>
+        </div>
+        
+        <div class="contact">
+            <h2> Me contacter </h2>
+        </div>
+
+    </div>
+    
 </body>
+
 </html>
