--- a/index.html
+++ b/index.html
@@ -53,51 +53,55 @@
 
         <a href=""> Télécharger mon CV </a>
 
-        <div class="projets">
             <h2> Mes projets </h2>
             <div class="projets">
 
                 <div class="projet">
-                    <h3> Aiyouan </h3>
+                    <h3> <a href="https://aiyouan.netlify.app/"> Aiyouan </a> </h3>
+                    <img src="img/aiyouan.png" alt="Site Aiyouan"> <br>
                     <small> Site vitrine pour une illustratrice jeunesse </small>
-                    <p> - HTML/CSS/Javascript 
-                        - Premier déploiement d'un site Web
-                        - Utilisation de figma pour maquetter l'application
+                    <p> - HTML/CSS/Javascript <br>
+                        - Premier déploiement d'un site Web <br>
+                        - SEO
+                        - Utilisation de figma pour maquetter l'application <br>
                     </p>
                 </div>
 
                 <div class="projet">
                     <h3> Pawtners </h3>
+                    <img src="" alt="">
                     <small> Projet de fin d'examen, site de rencontre pour chats</small>
                     <p>
-                        - Utilisation du framework Symfony
-                        - HTML/CSS/JavaScript
-                        - Gestion de projet
-                        - PHP/SQL/mySQL
+                        - Utilisation du framework Symfony <br>
+                        - HTML/CSS/JavaScript <br>
+                        - Gestion de projet <br>
+                        - PHP/SQL/mySQL <br>
                     </p>
                 </div>
 
                 <div class="projet">
                     <h3> Landing Page </h3>
+                    <img src="" alt="">
                     <small> Projet de formation </small>
                     <p>
-                        -Traduction de maquettes
-                        -HTML/CSS/JavaScript
+                        -Traduction de maquettes <br>
+                        -HTML/CSS/JavaScript <br>
                     </p>
                 </div>
 
                 <div class="projet">
                     <h3> IDFilms </h3>
+                    <img src="" alt="">
                     <small> Projet de formation </small>
                     <p>
-                        -Application qui requiert la gestion de base de données afin d'ajouter/supprimer des films, acteurs, genre et casting
-                        -SQL, MySQL, PHP natif
-                        -HTML, CSS, Javascript
+                        -Application qui requiert la gestion de base de données afin d'ajouter/supprimer des films, acteurs, genre et casting <br>
+                        -SQL, MySQL, PHP natif <br>
+                        -HTML, CSS, Javascript <br>
                     </p>
                 </div>
 
             </div>
-        </div>
+        
         
         <div class="contact">
             <h2> Me contacter </h2>
