--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </p>
         </div>
 
-        <h2>Mes compétences </h2>
+        <h2 class="competences-title">Mes compétences </h2>
 
         <div class="competences">
             <div class="competence">
@@ -53,7 +53,7 @@
 
         <a href=""> Télécharger mon CV </a>
 
-            <h2> Mes projets </h2>
+            <h2 class="projets-title"> Mes projets </h2>
             <div class="projets">
 
                 <div class="projet">
@@ -69,7 +69,7 @@
 
                 <div class="projet">
                     <h3> Pawtners </h3>
-                    <img src="" alt="">
+                    <img src="img/pawtners.png" alt="Site Pawtners"> <br>
                     <small> Projet de fin d'examen, site de rencontre pour chats</small>
                     <p>
                         - Utilisation du framework Symfony <br>
@@ -81,7 +81,7 @@
 
                 <div class="projet">
                     <h3> Landing Page </h3>
-                    <img src="" alt="">
+                    <img src="img/landing-page.png" alt="Site Landing page"> <br>
                     <small> Projet de formation </small>
                     <p>
                         -Traduction de maquettes <br>
@@ -91,7 +91,7 @@
 
                 <div class="projet">
                     <h3> IDFilms </h3>
-                    <img src="" alt="">
+                    <img src="img/idFilms.png" alt="Site IDFilms"> <br>
                     <small> Projet de formation </small>
                     <p>
                         -Application qui requiert la gestion de base de données afin d'ajouter/supprimer des films, acteurs, genre et casting <br>
@@ -106,9 +106,9 @@
         <div class="contact">
             <h2> Me contacter </h2>
             <ul>
-                <li> <i class="fa-solid fa-envelope"></i> </li>
-                <li> <i class="fa-brands fa-linkedin"></i> </li>
-                <li> <i class="fa-brands fa-github"></i> </li>
+                <li> <a href="mailto:hajarayaddouz29@gmail.com"> <i class="fa-solid fa-envelope"> </i> </a> </li>
+                <li> <a href="https://www.linkedin.com/in/hajar-ayaddouz-5b1816300/" target="_blank"> <i class="fa-brands fa-linkedin"></i> </a> </li>
+                <li> <a href="https://github.com/hjrayd"  target="_blank"> <i class="fa-brands fa-github"></i> </a> </li>
             </ul>
         </div>
 
