--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
                 <div class="projet">
                     <h3> IDFilms </h3>
-                    <img src="img/idFilms.png" alt="Site IDFilms"> <br>
+                    <img src="img/cinema.png" alt="Site IDFilms"> <br>
                     <small> Projet de formation </small>
                     <p>
                         -Application qui requiert la gestion de base de données afin d'ajouter/supprimer des films, acteurs, genre et casting <br>
