beginning of CSS, presentation

--- a/index.html
+++ b/index.html
@@ -15,17 +15,23 @@
     <div id="wrapper-portfolio">
 
         <div class="title">
-            <h1> Hajar Ayaddouz <strong> Développeuse Web et Web mobile </strong> </h1>
+            <h1> Hajar Ayaddouz <br> <strong> Développeuse Web et Web mobile </strong> </h1>
         </div>
         
         <div class="presentation">
-            <h2> Présentation </h2>
-            <img src="img/photo-presentation.jpg" alt="Photo de présentation">
-            <p>
-                Hello ! Je m'appelle Hajar, j'ai 22 ans et je suis diplômée d'une formation en développement Web et Web mobile. <br>
-                Ce parcours m’a permis d’acquérir de solides compétences aussi bien en back-end (PHP, Symfony, SQL) qu’en front-end (HTML, CSS, JavaScript). <br>
-                Depuis l’obtention de mon diplôme en février 2025, je suis activement à la recherche d’une alternance afin de poursuivre mes études en bac +3 et continuer à progresser dans le domaine du développement web.
-            </p>
+                <img src="img/photo-presentation.jpg" alt="Photo de présentation">
+                <div class="presentation-text">
+                    <p>
+                        Hello ! Je m'appelle Hajar, j'ai 22 ans et je suis diplômée d'une formation en développement Web et Web mobile.
+                    </p>
+                    <p>
+                        Ce parcours m’a permis d’acquérir de solides compétences aussi bien en back-end (PHP, Symfony, SQL) qu’en front-end (HTML, CSS, JavaScript).
+                    </p>
+                    <p>
+                        Depuis l’obtention de mon diplôme en février 2025, je suis activement à la recherche d’une alternance afin de poursuivre mes études en bac +3 et continuer à progresser dans le domaine du développement web.
+                    </p>
+                </div>  
+                
         </div>
 
         <h2 class="competences-title">Mes compétences </h2>
