--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 
         </div>
 
-        <h2 class="competences-title fade-in">Mes compétences </h2>
+        <h2 class="competences-title fade-in"> Mes <strong> compétences </strong> </h2>
 
         <div class="competences fade-in ">
             <div class="competence fade-in">
@@ -42,6 +42,7 @@
                 <ul>
                     <li> <i class="fa-brands fa-php"></i> PHP </li>
                     <li> <i class="fa-solid fa-database"></i> SQL </li>
+                    <li> <i class="fa-solid fa-database"></i> MySQL </li>
                     <li> <i class="fa-brands fa-symfony"></i> Symfony </li>
                 </ul>
             </div>
