--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         Hello ! Je m'appelle Hajar, j'ai 22 ans et je suis diplômée d'une formation en développement Web et Web mobile.
                     </p>
                     <p>
-                        Ce parcours m’a permis d’acquérir de solides compétences aussi bien en back-end (PHP, Symfony, SQL) qu’en front-end (HTML, CSS, JavaScript).
+                        Ce parcours m’a permis d’acquérir de solides compétences aussi bien en back-end (<strong>PHP</strong>, <strong>Symfony</strong>, <strong>SQL</strong>) qu’en front-end (<strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>).
                     </p>
                     <p>
                         Depuis l’obtention de mon diplôme en février 2025, je suis activement à la recherche d’une alternance afin de poursuivre mes études en bac +3 et continuer à progresser dans le domaine du développement web.
@@ -95,7 +95,7 @@
                     </li>
 
                     <li> 
-                        <div class="comeptence-name">   
+                        <div class="competence-name">   
                             <i class="fa-brands fa-figma"></i> Figma 
                         </div>
                         <small> Débutant </small>
